# monitoring

./: .gitignore  LICENSE  README.md
server/: .pre-commit-config.yaml  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
server/config/: asgi.py  wsgi.py
server/config/settings/: base.py  local.py  prod.py
server/docker/: Dockerfile  docker-compose.yml
server/docker/prod/: Dockerfile  nginx.conf
server/system_monitor/: apps.py  asgi.py  context_processors.py  handlers.py  models.py  serializers.py  services.py  urls.py  wsgi.py
server/system_monitor/api/: urls.py
server/system_monitor/api/serializers/: __init__.py  host_containers_serializer.py  host_processes_serializer.py
server/system_monitor/api/views/: __init__.py  host_containers_view.py  host_processes_view.py  host_stats_data_view.py
server/system_monitor/grpc/: system_monitor.proto  system_monitor_pb2.py  system_monitor_pb2_grpc.py
server/system_monitor/migrations/: 0001_initial.py  0002_alter_host_host_id.py
server/system_monitor/models/: __init__.py  host.py
server/system_monitor/settings/: django.py
server/system_monitor/static/css/: base.css  home.css  host_detail.css  list_view.css  login.css  navbar.css  search_modal.css  sidebar.css
server/system_monitor/static/js/: base.js  color-list-card.js  cpu-chart.js  fetch-containers-data.js  fetch-usage-data.js  modal-processes.js  (+3 more)
server/system_monitor/templates/: base.html  home.html  host_detail.html  host_list_view.html
server/system_monitor/views/: __init__.py  home_view.py  host_views.py  login_view.py
(+17 files in other folders)
