[project]
name = "monitoring"
version = "0.1.0"
description = "Montioring server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.2, <5.2",
    "djangorestframework>=3.15.2, <3.16",
    "django-environ>=0.11.2, <0.12",
    "django-socio-grpc>=0.23.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9, <0.7",
]

[tool.ruff]
target-version = "py312"

extend-exclude = [
    "*/migrations/*.py",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C4", # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]

extend-ignore = [
    "B904",  # Within an except clause, raise exceptions with ...
]
